--- a/index.html
+++ b/index.html
@@ -3,12 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <title>Randvoll GmbH</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div>
-        <h1>Randvoll Getränke GmbH</h1>
-        <p>Companies Website</p>
-    </div>
+    <main>
+        <h1>Randvoll Getränke</h1>
+        <h3>Drink different</h3>
+        <hr>
+        <p>Willkommen bei Randvoll! Unsere Gläser sind gefüllt - wie sieht's mit deinem aus?</p>
+        <p></p>
+    </main>
+
+<footer>
+    <p>© 2024 Randvoll. All Rights Reserved.<br><br>
+    Randvoll GmbH<br>
+    Schärenmoosstrasse 105<br>
+    8052 Zürich</p>
+</footer>
 
 </body>
 </html>
