--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
         <h3>Drink different</h3>
         <hr>
         <p>Willkommen bei Randvoll! Unsere Gläser sind gefüllt - wie sieht's mit deinem aus?</p>
-        <p>Für Fragen kannst du uns gerne kontaktieren.</p>
+        <p>Für Fragen kannst du uns gerne kontaktieren. Via Mail oder so.</p>
+        <hr>
+        <h2>NITROMOST</h2>
+        <p>DER Süssmost mit Schuss. Unser aktuelles Getränk, alle Infos unter <a href="https://nitromost.ch">www.nitromost.ch</a>.</p>
     </main>
 
 <footer>
