--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
 </head>
 <body>
     <main>
-        <h1>Randvoll Getränke</h1>
+        <img src="img/logo.png" alt="Randvoll Logo" id="logo">
         <h3>Drink different</h3>
         <hr>
         <p>Willkommen bei Randvoll! Unsere Gläser sind gefüllt - wie sieht's mit deinem aus?</p>
+        <p>Wir sind eine kleine Getränkefirma aus Zürich, und unser Ziel ist es, dir genau die Getränke zu liefern, die du brauchst.
+            <br>Produziert ist alles von Hand mit lokalen Zutaten und wir sind Teil von der Made in Zürich Initiative.</p>
         <p>Für Fragen kannst du uns gerne kontaktieren. Via Mail oder so.</p>
         <hr>
         <h2>NITROMOST</h2>
@@ -18,10 +20,12 @@
     </main>
 
 <footer>
-    <p>© <span id="copyright-year"></span> Randvoll. All Rights Reserved.<br><br>
+    <p>© <span id="copyright-year"></span> Randvoll. Alle Rechte vorbehalten.<br><br>
     Randvoll GmbH<br>
     Schärenmoosstrasse 105<br>
-    8052 Zürich</p>
+    8052 Züri<br><br>
+    drink@nitromost.ch<br>
+    CHE-464.547.237</p>
 </footer>
 
 </body>
