--- a/store.html
+++ b/store.html
@@ -8,7 +8,7 @@
 <body>
     <main>
         <img src="img/logo.png" alt="Randvoll Logo" id="logo">
-        <h3>Drink different</h3>
+        <a href="store.html"><h3>Store</h3></a>
         <hr>
 
         <div>
@@ -17,6 +17,8 @@
                 <script data-cfasync="false" type="text/javascript" src="https://app.ecwid.com/script.js?104672002&data_platform=code&data_date=2024-05-28" charset="utf-8"></script><script type="text/javascript"> xProductBrowser("categoriesPerRow=3","views=grid(20,3) list(60) table(60)","categoryView=grid","searchView=list","id=my-store-104672002");</script>
             </div>
         </div>
+
+        <hr>
 
     </main>
 
