--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Randvoll GmbH</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="scrollbar.css">
 </head>
 <body>
     <main>
@@ -14,19 +15,13 @@
         <p>Wir sind eine kleine Getränkefirma aus Zürich, und unser Ziel ist es, dir genau die Getränke zu liefern, die du brauchst.
             <br>Produziert ist alles von Hand mit lokalen Zutaten und wir sind Teil von der Made in Zürich Initiative.</p>
         <p>Für Fragen kannst du uns gerne kontaktieren. Via Mail oder so.</p>
-        <hr>
         <h2>NITROMOST</h2>
         <p>DER Süssmost mit Schuss. Unser aktuelles Getränk, alle Infos unter <a href="https://nitromost.ch">www.nitromost.ch</a>.</p>
     </main>
-
 <footer>
     <p>© <span id="copyright-year"></span> Randvoll. Alle Rechte vorbehalten.<br><br>
-    Randvoll GmbH<br>
-    Schärenmoosstrasse 105<br>
-    8052 Züri<br><br>
-    079 575 51 22<br>
-    drink@nitromost.ch<br>
-    CHE-464.547.237</p>
+        Randvoll GmbH | Schärenmoosstrasse 105 | 8052 Züri<br>
+        079 575 51 22 | drink@nitromost.ch | CHE-464.547.237</p>
 </footer>
 
 </body>
