--- a/store.html
+++ b/store.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <title>Randvoll GmbH</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="scrollbar.css">
 </head>
 <body>
     <main>
-        <img src="img/logo.png" alt="Randvoll Logo" id="logo">
+        <a href="index.html"><img src="img/logo.png" alt="Randvoll Logo" id="logo"></a>
         <a href="store.html"><h3>Store</h3></a>
         <hr>
 
@@ -24,12 +25,8 @@
 
 <footer>
     <p>© <span id="copyright-year"></span> Randvoll. Alle Rechte vorbehalten.<br><br>
-    Randvoll GmbH<br>
-    Schärenmoosstrasse 105<br>
-    8052 Züri<br><br>
-    079 575 51 22<br>
-    drink@nitromost.ch<br>
-    CHE-464.547.237</p>
+    Randvoll GmbH | Schärenmoosstrasse 105 | 8052 Züri<br>
+    079 575 51 22 | drink@nitromost.ch | CHE-464.547.237</p>
 </footer>
 
 </body>
