--- a/index.html
+++ b/index.html
@@ -11,11 +11,19 @@
         <img src="img/logo.png" alt="Randvoll Logo" id="logo">
         <h3>Drink different</h3>
         <hr>
+        <img src="img/gifs/zDisco-BAR.gif" alt="discobar" style="width: 100%;">
+        <hr>
+        <br><br>
         <p>Willkommen bei Randvoll! Unsere Gläser sind gefüllt - wie sieht's mit deinem aus?</p>
         <p>Wir sind eine kleine Getränkefirma aus Zürich, und unser Ziel ist es, dir genau die Getränke zu liefern, die du brauchst.
             <br>Produziert ist alles von Hand mit lokalen Zutaten und wir sind Teil von der Made in Zürich Initiative.</p>
         <p>Für Fragen kannst du uns gerne kontaktieren. Via Mail oder so.</p>
-        <h2>NITROMOST</h2>
+
+        <div class="img-div">
+            <img src="img/gifs/nitro.gif" style="height: 70px;" alt="nitro">
+            <h2>NITROMOST</h2>
+            <img src="img/gifs/newNitro.gif" style="height: 70px; padding-left: 10px;" alt="nitro">
+        </div>
         <p>DER Süssmost mit Schuss. Unser aktuelles Getränk, alle Infos unter <a href="https://nitromost.ch">www.nitromost.ch</a>.</p>
     </main>
 <footer>
