--- a/index.html
+++ b/index.html
@@ -11,8 +11,14 @@
         <img src="img/logo.png" alt="Randvoll Logo" id="logo">
         <h3>Drink different</h3>
         <hr>
-        <img src="img/gifs/zDisco-BAR.gif" alt="discobar" style="width: 100%;">
+        <img src="img/gifs/zDisco-BAR.gif" alt="discobar" style="width: 100%; margin-top: 10px;">
         <hr>
+        <nav>
+            <a href="index.html" class="nav-link nav-active">Home</a>
+            <a href="store.html" class="nav-link">Store</a>
+           <!--<a href="about.html" class="nav-link">About</a>
+            <a href="contact.html" class="nav-link">Contact</a>-->
+        </nav>
         <br><br>
         <p>Willkommen bei Randvoll! Unsere Gläser sind gefüllt - wie sieht's mit deinem aus?</p>
         <p>Wir sind eine kleine Getränkefirma aus Zürich, und unser Ziel ist es, dir genau die Getränke zu liefern, die du brauchst.
