--- a/store.html
+++ b/store.html
@@ -9,8 +9,16 @@
 <body>
     <main>
         <a href="index.html"><img src="img/logo.png" alt="Randvoll Logo" id="logo"></a>
-        <a href="store.html"><h3>Store</h3></a>
+        <h3>Drink different</h3>
         <hr>
+        <img src="img/gifs/zDisco-BAR.gif" alt="discobar" style="width: 100%; margin-top: 10px;">
+        <hr>
+        <nav>
+            <a href="index.html" class="nav-link">Home</a>
+            <a href="store.html" class="nav-link nav-active">Store</a>
+            <!--<a href="about.html" class="nav-link">About</a>
+             <a href="contact.html" class="nav-link">Contact</a>-->
+        </nav>
 
         <div>
             <div id="my-store-104672002"></div>
