--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
             <br>Produziert ist alles von Hand mit lokalen Zutaten und wir sind Teil von der Made in Zürich Initiative.</p>
         <p>Für Fragen kannst du uns gerne kontaktieren. Via Mail oder so.</p>
 
+        <p>Bis bald!</p>
+
         <div class="img-div">
             <img src="img/gifs/nitro.gif" style="height: 70px;" alt="nitro">
             <h2>NITROMOST</h2>
