--- a/store.html
+++ b/store.html
@@ -32,8 +32,8 @@
     </main>
 
 <footer>
-    <p>© <span id="copyright-year"></span> Randvoll. Alle Rechte vorbehalten.<br><br>
-    Randvoll GmbH | Schärenmoosstrasse 105 | 8052 Züri<br>
+    <p>© <span id="copyright-year"></span> randvoll. Alle Rechte vorbehalten.<br><br>
+    randvoll GmbH | Schärenmoosstrasse 105 | 8052 Züri<br>
     079 575 51 22 | drink@nitromost.ch | CHE-464.547.237</p>
 </footer>
 
