--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
     <meta charset="UTF-8">
     <meta name="description" content="Die Zürcher Getränkefirma mit den besten Getränken.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>randvoll GmbH</title>
+    <title>randvoll GmbH | Home</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="scrollbar.css">
 </head>
