--- a/store.html
+++ b/store.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
     <meta charset="UTF-8">
-    <title>Randvoll GmbH</title>
+    <meta name="description" content="Der Store der Getränkefirma mit den besten Getränken.">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Randvoll GmbH | Store</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="scrollbar.css">
 </head>
