--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <nav>
             <a href="index.html" class="nav-link nav-active">Home</a>
             <a href="store.html" class="nav-link">Store</a>
-           <!--<a href="about.html" class="nav-link">About</a>
-            <a href="contact.html" class="nav-link">Contact</a>-->
+            <a href="kontakt.html" class="nav-link">Kontakt</a>
+            <!--<a href="contact.html" class="nav-link">Contact</a>-->
         </nav>
         <br><br>
         <p>Willkommen bei Randvoll! Unsere Gläser sind gefüllt - wie sieht's mit deinem aus?</p>
@@ -28,6 +28,8 @@
         <p>Für Fragen kannst du uns gerne kontaktieren. Via Mail oder so.</p>
 
         <p>Bis bald!</p>
+        <br><br>
+        <hr>
 
         <div class="img-div">
             <img src="img/gifs/nitro.gif" style="height: 70px;" alt="nitro">
@@ -35,6 +37,14 @@
             <img src="img/gifs/newNitro.gif" style="height: 70px; padding-left: 10px;" alt="nitro">
         </div>
         <p>DER Süssmost mit Schuss. Unser aktuelles Getränk, alle Infos unter <a href="https://nitromost.ch">www.nitromost.ch</a>.</p>
+        <p>Nitromost wird in der 1 Liter Flasche oder als 10 Liter Bag in Box verkauft. Alle Verkaufsstandorte findest du auf der Nitro-Seite.</p>
+
+        <br><br>
+        <hr>
+        <br><br>
+        <img src="img/gifs/new10.gif" style="height: 70px; margin-left: 20%;" alt="new">
+        <p>Achtung!! Unser online-Store ist bald offen!
+            <br>Dort kannst du dann Produkte direkt bestellen. Voraussichtlich ist das ab Juli möglich.</p>
     </main>
 <footer>
     <p>© <span id="copyright-year"></span> randvoll. Alle Rechte vorbehalten.<br><br>
