--- a/store.html
+++ b/store.html
@@ -7,6 +7,16 @@
     <title>Randvoll GmbH | Store</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="scrollbar.css">
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-EJ0T2K1FH2"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-EJ0T2K1FH2');
+    </script>
+
 </head>
 <body>
     <main>
