--- a/index.html
+++ b/index.html
@@ -18,7 +18,11 @@
     </script>
 </head>
 <body>
-    <main>
+
+<video autoplay loop muted playsinline poster="img/background-bubbles.mov">
+</video>
+
+<main>
         <img src="img/logo.png" alt="Randvoll Logo" id="logo">
         <h3><strong>die</strong> Getränkefirma.</h3>
         <hr>
