--- a/kontakt.html
+++ b/kontakt.html
@@ -19,6 +19,11 @@
 </head>
 <body>
 <main>
+
+  <video autoplay loop muted playsinline>
+    <source src="img/background-bubbles.mov" type="video/mov">
+  </video>
+
   <a href="index.html"><img src="img/logo.png" alt="Randvoll Logo" id="logo"></a>
   <h3><strong>die</strong> Getränkefirma.</h3>
   <hr>
