--- a/store.html
+++ b/store.html
@@ -18,6 +18,11 @@
     </script>
 </head>
 <body>
+
+<video autoplay loop muted playsinline>
+    <source src="img/background-bubbles.mov" type="video/mov">
+</video>
+
     <main>
         <a href="index.html"><img src="img/logo.png" alt="Randvoll Logo" id="logo"></a>
         <h3><strong>die</strong> Getränkefirma.</h3>
