--- a/kontakt.html
+++ b/kontakt.html
@@ -19,9 +19,7 @@
 </head>
 <body>
 <main>
-
-  <video autoplay loop muted playsinline>
-    <source src="img/background-bubbles.mov" type="video/mov">
+  <video autoplay loop muted playsinline poster="img/background-bubbles.mov">
   </video>
 
   <a href="index.html"><img src="img/logo.png" alt="Randvoll Logo" id="logo"></a>
@@ -38,9 +36,14 @@
   <div style="text-align: center;">
     <h2>Kontakt</h2>
     <p>Bei Fragen, Anregungen, Ideen, offenen Punkten, Kritik (aber auch Lob!) freuen wir uns immer von dir zu hören.</p><br>
+    <br>
+    <img src="img/gifs/e-mail-contactus.gif" alt="email" style="width: 60px;">
+    <br>
     <a href="mailto:drink@nitromost.ch">PER MAIL</a><br>
     <a href="tel:+41795755122">PER TELEFON</a>
   </div>
+
+  <img src="img/gifs/110.gif" alt="contact-bar" style="width: 100%; margin-top: 100px;">
 
 </main>
 
