--- a/store.html
+++ b/store.html
@@ -19,8 +19,7 @@
 </head>
 <body>
 
-<video autoplay loop muted playsinline>
-    <source src="img/background-bubbles.mov" type="video/mov">
+<video autoplay loop muted playsinline poster="img/background-bubbles.mov">
 </video>
 
     <main>
