--- a/kontakt.html
+++ b/kontakt.html
@@ -48,9 +48,10 @@
 </main>
 
 <footer>
-  <p>© <span id="copyright-year"></span> randvoll. Alle Rechte vorbehalten.<br><br>
-    randvoll GmbH | Schärenmoosstrasse 105 | 8052 Züri<br>
+  <p>randvoll GmbH | Schärenmoosstrasse 105 | 8052 Züri<br>
     079 575 51 22 | drink@nitromost.ch | CHE-464.547.237</p>
+  <img src="img/gifs/thanksvisit_clr.gif" alt="thanks" style="width: 30%; margin-top: 10px;">
+  <p>© <span id="copyright-year"></span> randvoll. Alle Rechte vorbehalten.</p>
 </footer>
 
 </body>
