--- a/index.html
+++ b/index.html
@@ -60,9 +60,10 @@
             <br>Dort kannst du dann Produkte direkt bestellen. Voraussichtlich ist das ab Juli möglich.</p>
     </main>
 <footer>
-    <p>© <span id="copyright-year"></span> randvoll. Alle Rechte vorbehalten.<br><br>
-        randvoll GmbH | Schärenmoosstrasse 105 | 8052 Züri<br>
+    <p>randvoll GmbH | Schärenmoosstrasse 105 | 8052 Züri<br>
         079 575 51 22 | drink@nitromost.ch | CHE-464.547.237</p>
+    <img src="img/gifs/thanksvisit_clr.gif" alt="thanks" style="width: 30%; margin-top: 10px;">
+    <p>© <span id="copyright-year"></span> randvoll. Alle Rechte vorbehalten.</p>
 </footer>
 
 </body>
