--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </video>
 
 <main>
-        <img src="img/logo.png" alt="Randvoll Logo" id="logo">
+        <img src="img/logo-randvoll.png" alt="Randvoll Logo" id="logo">
         <h3><strong>die</strong> Getränkefirma.</h3>
         <hr>
         <img src="img/gifs/zDisco-BAR.gif" alt="discobar" style="width: 100%; margin-top: 10px;">
@@ -38,7 +38,8 @@
         <p>Willkommen bei Randvoll! Unsere Gläser sind gefüllt - wie sieht's mit deinem aus?</p>
         <p>Wir sind eine kleine Getränkefirma aus Zürich, und unser Ziel ist es, dir genau die Getränke zu liefern, die du brauchst.
             <br>Produziert ist alles von Hand mit lokalen Zutaten und wir sind Teil von der Made in Zürich Initiative.</p>
-        <p>Für Fragen kannst du uns gerne kontaktieren. Via Mail oder so.</p>
+    <br>
+    <p>Für Fragen kannst du uns gerne <a href="kontakt.html"> kontaktieren.</a> Via Mail oder so.</p>
 
         <p>Bis bald!</p>
         <br><br>
@@ -54,15 +55,37 @@
 
         <br><br>
         <hr>
+
+        <div>
+            <img src="img/gifs/disco.gif" style="height: 70px;" alt="disco">
+            <img src="img/gifs/disco.gif" style="height: 70px;" alt="disco">
+            <img src="img/gifs/disco.gif" style="height: 70px; float:right" alt="disco">
+            <img src="img/gifs/disco.gif" style="height: 70px; float:right" alt="disco">
+            <h2 style="margin-top:0; padding-top:0;">!! DISCOLIMO !!</h2>
+            <p>Sommerlich süss, frisch mit Thymian: Das ist die Discolimo.<br>
+            Sie ist im Handel erhältlich zu einem unschlagbaren Preis und kann es kaum erwarten, von dir probiert zu werden.</p>
+            <br>
+            <p>Informationen auf der separaten Seite <a href="https://discolimo.ch">www.discolimo.ch</a>.</p>
+            <br>
+            <img src="img/gifs/DrinkMe.gif" style="height: 70px; float:right;" alt="drinkme">
+            <br>
+        </div>
+        <hr>
         <br><br>
+    <div>
         <img src="img/gifs/new10.gif" style="height: 70px; margin-left: 20%;" alt="new">
         <p>Achtung!! Unser online-Store ist bald offen!
-            <br>Dort kannst du dann Produkte direkt bestellen. Voraussichtlich ist das ab Juli möglich.</p>
+        <br>Dort kannst du dann Produkte direkt bestellen. Voraussichtlich ist das ab <strike>Juli</strike> August möglich.</p>
+    </div>
+
+
+    <img src="img/gifs/vk.gif" alt="discoball" style="position:absolute; top: 10px; right: 20px; width: 5%;">
+
     </main>
 <footer>
     <p>randvoll GmbH | Schärenmoosstrasse 105 | 8052 Züri<br>
         079 575 51 22 | drink@nitromost.ch | CHE-464.547.237</p>
-    <img src="img/gifs/thanksvisit_clr.gif" alt="thanks" style="width: 30%; margin-top: 10px;">
+    <img src="img/gifs/thanksvisit_clr.gif" alt="thanks" style="width: 20%; margin-top: 10px;">
     <p>© <span id="copyright-year"></span> randvoll. Alle Rechte vorbehalten.</p>
 </footer>
 
