--- a/kontakt.html
+++ b/kontakt.html
@@ -22,7 +22,7 @@
   <video autoplay loop muted playsinline poster="img/background-bubbles.mov">
   </video>
 
-  <a href="index.html"><img src="img/logo.png" alt="Randvoll Logo" id="logo"></a>
+  <a href="index.html"><img src="img/logo-randvoll.png" alt="Randvoll Logo" id="logo"></a>
   <h3><strong>die</strong> Getränkefirma.</h3>
   <hr>
   <img src="img/gifs/zDisco-BAR.gif" alt="discobar" style="width: 100%; margin-top: 10px;">
@@ -50,7 +50,7 @@
 <footer>
   <p>randvoll GmbH | Schärenmoosstrasse 105 | 8052 Züri<br>
     079 575 51 22 | drink@nitromost.ch | CHE-464.547.237</p>
-  <img src="img/gifs/thanksvisit_clr.gif" alt="thanks" style="width: 30%; margin-top: 10px;">
+  <img src="img/gifs/thanksvisit_clr.gif" alt="thanks" style="width: 20%; margin-top: 10px;">
   <p>© <span id="copyright-year"></span> randvoll. Alle Rechte vorbehalten.</p>
 </footer>
 
