--- a/store.html
+++ b/store.html
@@ -34,10 +34,10 @@
             <a href="kontakt.html" class="nav-link">Kontakt</a>
         </nav>
 
-        <div>
-            <div id="my-store-104672002"></div>
+        <div class="storeContainer">
+            <div id="my-store-106886038"></div>
             <div>
-                <script data-cfasync="false" type="text/javascript" src="https://app.ecwid.com/script.js?104672002&data_platform=code&data_date=2024-05-28" charset="utf-8"></script><script type="text/javascript"> xProductBrowser("categoriesPerRow=3","views=grid(20,3) list(60) table(60)","categoryView=grid","searchView=list","id=my-store-104672002");</script>
+                <script data-cfasync="false" type="text/javascript" src="https://app.ecwid.com/script.js?106886038&data_platform=code&data_date=2024-07-29" charset="utf-8"></script><script type="text/javascript"> xProductBrowser("categoriesPerRow=3","views=grid(20,3) list(60) table(60)","categoryView=grid","searchView=list","id=my-store-106886038");</script>
             </div>
         </div>
 
