--- a/kontakt.html
+++ b/kontakt.html
@@ -30,6 +30,7 @@
   <nav>
     <a href="index.html" class="nav-link">Home</a>
     <a href="store.html" class="nav-link ">Store</a>
+    <a href="about.html" class="nav-link">Über uns</a>
     <a href="kontakt.html" class="nav-link nav-active">Kontakt</a>
   </nav>
 
