--- a/store.html
+++ b/store.html
@@ -31,6 +31,7 @@
         <nav>
             <a href="index.html" class="nav-link">Home</a>
             <a href="store.html" class="nav-link nav-active">Store</a>
+            <a href="about.html" class="nav-link">Über uns</a>
             <a href="kontakt.html" class="nav-link">Kontakt</a>
         </nav>
 
@@ -42,6 +43,8 @@
         </div>
 
         <hr>
+
+        <img src="img/gifs/open.gif" alt="discoball" style="position:absolute; top: 20px; left: 20px; width: 10%;">
 
     </main>
 
