--- a/about.html
+++ b/about.html
@@ -65,7 +65,7 @@
 
 <footer>
   <p>randvoll GmbH | Schärenmoosstrasse 105 | 8052 Züri<br>
-    079 575 51 22 | drink@nitromost.ch | CHE-464.547.237</p>
+    079 575 51 22 | prost@randvoll.ch | CHE-464.547.237</p>
   <img src="img/gifs/thanksvisit_clr.gif" alt="thanks" style="width: 20%; margin-top: 10px;">
   <p>© <span id="copyright-year"></span> randvoll. Alle Rechte vorbehalten.</p>
 </footer>
