--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <hr>
         <nav>
             <a href="index.html" class="nav-link nav-active">Home</a>
-            <a href="store.html" class="nav-link">Store</a>
+            <a href="shop.html" class="nav-link">Shop</a>
             <a href="about.html" class="nav-link">Über uns</a>
             <a href="kontakt.html" class="nav-link">Kontakt</a>
             <!--<a href="contact.html" class="nav-link">Contact</a>-->
@@ -75,8 +75,8 @@
         <br><br>
     <div>
         <img src="img/gifs/new10.gif" style="height: 70px; margin-left: 20%;" alt="new">
-        <p>Achtung!! Unser online-Store ist bald offen!
-        <br>Dort kannst du dann Produkte direkt bestellen. Voraussichtlich ist das ab <strike>Juli</strike> August möglich.</p>
+        <p>Achtung!! Unser online-Store ist offen!
+        <br>Dort kannst du unsere Produkte direkt bestellen.</p>
     </div>
 
 
@@ -85,7 +85,7 @@
     </main>
 <footer>
     <p>randvoll GmbH | Schärenmoosstrasse 105 | 8052 Züri<br>
-        079 575 51 22 | prost@randvoll.ch | CHE-464.547.237</p>
+        079 575 51 22 | prost@randvoll.gmbh | CHE-464.547.237</p>
     <img src="img/gifs/thanksvisit_clr.gif" alt="thanks" style="width: 20%; margin-top: 10px;">
     <p>© <span id="copyright-year"></span> randvoll. Alle Rechte vorbehalten.</p>
 </footer>
