--- a/kontakt.html
+++ b/kontakt.html
@@ -29,7 +29,7 @@
   <hr>
   <nav>
     <a href="index.html" class="nav-link">Home</a>
-    <a href="store.html" class="nav-link ">Store</a>
+    <a href="shop.html" class="nav-link ">Shop</a>
     <a href="about.html" class="nav-link">Über uns</a>
     <a href="kontakt.html" class="nav-link nav-active">Kontakt</a>
   </nav>
@@ -50,7 +50,7 @@
 
 <footer>
   <p>randvoll GmbH | Schärenmoosstrasse 105 | 8052 Züri<br>
-    079 575 51 22 | prost@randvoll.ch | CHE-464.547.237</p>
+    079 575 51 22 | prost@randvoll.gmbh | CHE-464.547.237</p>
   <img src="img/gifs/thanksvisit_clr.gif" alt="thanks" style="width: 20%; margin-top: 10px;">
   <p>© <span id="copyright-year"></span> randvoll. Alle Rechte vorbehalten.</p>
 </footer>
