added images and esel.bar

--- a/kontakt.html
+++ b/kontakt.html
@@ -30,6 +30,7 @@
   <nav>
     <a href="index.html" class="nav-link">Home</a>
     <a href="shop.html" class="nav-link ">Shop</a>
+    <a href="projekte.html" class="nav-link">Projekte</a>
     <a href="about.html" class="nav-link">Über uns</a>
     <a href="kontakt.html" class="nav-link nav-active">Kontakt</a>
   </nav>
@@ -41,7 +42,8 @@
     <img src="img/gifs/e-mail-contactus.gif" alt="email" style="width: 60px;">
     <br>
     <a href="mailto:drink@nitromost.ch">PER MAIL</a><br>
-    <a href="tel:+41795755122">PER TELEFON</a>
+    <a href="tel:+41795755122">PER TELEFON</a><br>
+    <a href="https://www.instagram.com/randvoll.gmbh/">PER DM (instagram)</a>
   </div>
 
   <img src="img/gifs/110.gif" alt="contact-bar" style="width: 100%; margin-top: 100px;">
