--- a/shop.html
+++ b/shop.html
@@ -31,6 +31,7 @@
         <nav>
             <a href="index.html" class="nav-link">Home</a>
             <a href="shop.html" class="nav-link nav-active">Shop</a>
+            <a href="projekte.html" class="nav-link">Projekte</a>
             <a href="about.html" class="nav-link">Über uns</a>
             <a href="kontakt.html" class="nav-link">Kontakt</a>
         </nav>
