--- a/about.html
+++ b/about.html
@@ -30,6 +30,7 @@
   <nav>
     <a href="index.html" class="nav-link">Home</a>
     <a href="shop.html" class="nav-link">Shop</a>
+    <a href="projekte.html" class="nav-link">Projekte</a>
     <a href="about.html" class="nav-link nav-active">Über uns</a>
     <a href="kontakt.html" class="nav-link">Kontakt</a>
   </nav>
@@ -39,19 +40,19 @@
         <p>Wir sind stolz auf unser Team, das die besten Getränke für dich kreiert.</p><br>
         <div class="employee-container">
             <div class="employee">
-                <img src="img/employees/employee1.jpg" alt="Jannis" style="width: 150px;">
+                <img src="img/jannis.jpg" alt="Jannis" style="width: 250px; height: 250px; object-fit: cover;">
                 <h3>Jannis</h3>
                 <h4>CFO</h4>
                 <p>Jannis ist der Kopf hinter Randvoll und sorgt dafür, dass alles reibungslos läuft.</p>
             </div>
             <div class="employee">
-                <img src="img/employees/employee2.jpg" alt="Päde" style="width: 150px;">
+                <img src="img/paede.jpg" alt="Päde" style="width: 250px; height: 250px; object-fit: cover;">
                 <h3>Päde</h3>
                 <h4>Marketing</h4>
                 <p>Päde ist verantwortlich für unsere Marketingstrategien und sorgt dafür, dass jede:r von unseren Getränken erfährt.</p>
             </div>
             <div class="employee">
-                <img src="img/employees/employee3.jpg" alt="Flo" style="width: 150px;">
+                <img src="img/flo.jpg" alt="Flo" style="width: 250px; height: 250px; object-fit: cover;">
                 <h3>Flo</h3>
                 <h4>Who knows</h4>
                 <p>Flo entwickelt neue Getränke und verbessert ständig unsere bestehenden Produkte.</p>
