--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <nav>
             <a href="index.html" class="nav-link nav-active">Home</a>
             <a href="shop.html" class="nav-link">Shop</a>
+            <a href="projekte.html" class="nav-link">Projekte</a>
             <a href="about.html" class="nav-link">Über uns</a>
             <a href="kontakt.html" class="nav-link">Kontakt</a>
             <!--<a href="contact.html" class="nav-link">Contact</a>-->
