--- a/about.html
+++ b/about.html
@@ -68,7 +68,7 @@
   <p>randvoll GmbH | Schärenmoosstrasse 105 | 8052 Züri<br>
     079 575 51 22 | prost@randvoll.gmbh | CHE-464.547.237</p>
   <img src="img/gifs/thanksvisit_clr.gif" alt="thanks" style="width: 20%; margin-top: 10px;">
-  <p>© <span id="copyright-year"></span> randvoll. Alle Rechte vorbehalten.</p>
+  <p>© <span id="copyright-year"></span> randvoll GmbH. Alle Rechte vorbehalten.</p>
 </footer>
 
 </body>
