--- a/shop.html
+++ b/shop.html
@@ -24,9 +24,20 @@
 
     <main>
         <a href="index.html"><img src="img/logo-randvoll.png" alt="Randvoll Logo" id="logo"></a>
+
+        <div class="cart-logo">
+            <div class="ec-cart-widget"></div>
+            <div>
+                <script data-cfasync="false" type="text/javascript" src="https://app.ecwid.com/script.js?106886038&data_platform=code&data_date=2025-02-18" charset="utf-8"></script>
+                <script type="text/javascript">Ecwid.init();</script>
+            </div>
+        </div>
+
         <h3><strong>die</strong> Getränkefirma.</h3>
         <hr>
         <img src="img/gifs/zDisco-BAR.gif" alt="discobar" style="width: 100%; margin-top: 10px;">
+
+
         <hr>
         <nav>
             <a href="index.html" class="nav-link">Home</a>
@@ -35,6 +46,9 @@
             <a href="about.html" class="nav-link">Über uns</a>
             <a href="kontakt.html" class="nav-link">Kontakt</a>
         </nav>
+
+        <p><br>Willkommen im Onlinestore.
+        <br><br>Versand CH: 15 Franken<br>Abholung: Gratis dänk</p>
 
         <div class="storeContainer">
             <div id="my-store-106886038"></div>
@@ -53,7 +67,7 @@
     <p>randvoll GmbH | Schärenmoosstrasse 105 | 8052 Züri<br>
         079 575 51 22 | prost@randvoll.gmbh | CHE-464.547.237</p>
     <img src="img/gifs/thanksvorvisiting.gif" alt="thanks" style="width: 20%; margin-top: 10px;">
-    <p>© <span id="copyright-year"></span> randvoll. Alle Rechte vorbehalten.</p>
+    <p>© <span id="copyright-year"></span> randvoll GmbH. Alle Rechte vorbehalten.</p>
 </footer>
 
 </body>
