--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
     <br>
     <p>Für Fragen kannst du uns gerne <a href="kontakt.html"> kontaktieren.</a> Via Mail oder so.</p>
 
+    <p>Für <strong>aktuelle News</strong> kannst du gerne unserem Telegram-Channel beitreten: <a href="https://t.me/randvoll_gmbh">Hier</a></p><br>
+
         <p>Bis bald!</p>
         <br><br>
         <hr>
@@ -64,7 +66,11 @@
             <img src="img/gifs/disco.gif" style="height: 70px; float:right" alt="disco">
             <img src="img/gifs/disco.gif" style="height: 70px; float:right" alt="disco">
             <h2 style="margin-top:0; padding-top:0;">!! DISCOLIMO !!</h2>
-            <p>Sommerlich süss, frisch mit Thymian: Das ist die Discolimo.<br>
+            <h3>I say disco you say limo</h3>
+            <p>Was macht die gemeine Limo zur discolimo?</p>
+            <h3>Alkohol!</h3>
+
+            <p>Sommerlich sauer mit einem Hauch von frischem Thymian und natürlich ordentlich Benzin, das ist discolimo, die lang antizipierte Sommererfrischung für Zürich.<br>
             Sie ist im Handel erhältlich zu einem unschlagbaren Preis und kann es kaum erwarten, von dir probiert zu werden.</p>
             <br>
             <p>Informationen auf der separaten Seite <a href="https://discolimo.ch">www.discolimo.ch</a>.</p>
