--- a/kontakt.html
+++ b/kontakt.html
@@ -45,6 +45,9 @@
     <a href="tel:+41795755122">PER TELEFON</a><br>
     <a href="https://www.instagram.com/randvoll.gmbh/">PER DM (instagram)</a>
   </div>
+  <br>
+  <p>Für <strong>aktuelle News</strong> kannst du gerne unserem Telegram-Channel beitreten: <a href="https://t.me/randvoll_gmbh">Hier</a></p><br>
+
 
   <img src="img/gifs/110.gif" alt="contact-bar" style="width: 100%; margin-top: 100px;">
 
