--- a/about.html
+++ b/about.html
@@ -43,19 +43,19 @@
                 <img src="img/jannis.jpg" alt="Jannis" style="width: 250px; height: 250px; object-fit: cover;">
                 <h3>Jannis</h3>
                 <h4>CFO</h4>
-                <p>Jannis ist der Kopf hinter Randvoll und sorgt dafür, dass alles reibungslos läuft.</p>
+                <p>Jannis arbeitet tagsüber in der Brauerei Oerlikon, nachts ist der Kopf hinter Randvoll und sorgt dafür, dass alles reibungslos läuft.</p>
             </div>
             <div class="employee">
                 <img src="img/paede.jpg" alt="Päde" style="width: 250px; height: 250px; object-fit: cover;">
                 <h3>Päde</h3>
                 <h4>Marketing</h4>
-                <p>Päde ist verantwortlich für unsere Marketingstrategien und sorgt dafür, dass jede:r von unseren Getränken erfährt.</p>
+                <p>Päde ist verantwortlich für unsere "Marketingstrategien" und sorgt dafür, dass jede:r von unseren Getränken erfährt.</p>
             </div>
             <div class="employee">
                 <img src="img/flo.jpg" alt="Flo" style="width: 250px; height: 250px; object-fit: cover;">
                 <h3>Flo</h3>
                 <h4>Who knows</h4>
-                <p>Flo entwickelt neue Getränke und verbessert ständig unsere bestehenden Produkte.</p>
+                <p>Klar, hier ist ein Textvorschlag: Flo entwickelt neue Getränke und verbessert ständig unsere bestehenden Produkte.</p>
             </div>
         </div>
     </div>
