new project sections

--- a/projekte.html
+++ b/projekte.html
@@ -37,14 +37,47 @@
 
     <div style="text-align: center;">
         <h2>Projekte</h2>
-        <p>Uns wird selten langweilig. Die aktuellen Projekte findest du auf dieser Website:</p>
+        <p>Uns wird selten langweilig. Eine Auswahl unserer Projekte findest du auf dieser Website.</p>
 
-        <br><br><br>
+        <p>Und, falls du dich fragst von wo all die geilen Fotis sind - das war natürlich <a href="https://www.simeonwaelti.com" target="_blank">Simeon</a>!</p>
 
-        <a href="https://esel.bar"><h3>Esel Bar</h3></a>
-        <p>Diesen Herbst eröffnen wir für drei Monate ein Pop-Up am Idaplatz. Schau doch mal rein bei uns!</p>
         <br>
-        <img src="img/esel.png" alt="esel" style="width: 50%;"><br>
+
+        <a href="https://esel.bar"><h3>esel | Okt - Dez 2024</h3></a>
+        <p>Am Idaplatz führten wir während drei Monaten eine glatte PopUp-Bar. Hier ein paar Impressionen.</p>
+        <br>
+
+        <div class="gallery-container">
+            <div class="masonry-layout">
+                <img src="img/esel/1.jpg" alt="Esel Image 1">
+                <img src="img/esel/2.jpg" alt="Esel Image 2">
+                <img src="img/esel/3.jpg" alt="Esel Image 3">
+                <img src="img/esel/6.jpg" alt="Esel Image 4">
+                <img src="img/esel/5.JPG" alt="Esel Image 5">
+                <img src="img/esel/4.jpg" alt="Esel Image 6">
+                <img src="img/esel/7.jpg" alt="Esel Image 7">
+                <img src="img/esel/8.png" alt="Esel Image 8">
+                <img src="img/esel/9.jpg" alt="Esel Image 9">
+                <img src="img/esel/10.jpg" alt="Esel Image 10">
+            </div>
+        </div>
+
+        <a href="https://www.instagram.com/zumwarmewerni/"><h3>ZUM WARME WERNI | Jan - Mar 2023</h3></a>
+        <p>Unser erstes PopUp führten wir während drei Monaten im Dynamo direkt bei der Limmat.</p>
+        <br>
+
+        <div class="gallery-container">
+            <div class="masonry-layout">
+                <img src="img/werni/1.jpeg" alt="Werni Image 1">
+                <img src="img/werni/2.jpg" alt="Werni Image 2">
+                <img src="img/werni/8.png" alt="Werni Image 8">
+                <img src="img/werni/3.jpg" alt="Werni Image 3">
+                <img src="img/werni/6.jpg" alt="Werni Image 4">
+                <img src="img/werni/5.jpg" alt="Werni Image 5">
+                <img src="img/werni/4.jpg" alt="Werni Image 6">
+                <img src="img/werni/7.jpg" alt="Werni Image 7">
+            </div>
+        </div>
 
 
 </main>
