--- a/about.html
+++ b/about.html
@@ -62,6 +62,14 @@
 
   <img src="img/gifs/lines.gif" alt="lines-bar" style="width: 100%; margin-top: 100px;">
 
+    <div style="text-align: center;">
+        <h2>Career Opportunities at randvoll GmbH</h2>
+        <p>Aktuell haben wir aus finanziellen Gründen keine Stellen offen. Natürlich freuen wir uns trotzdem jederzeit über deine Initiativbewerbung.
+            <br>Wir sind immer auf der Suche nach billigen Arbeitskräften.
+            <a href="kontakt.html">Kontaktiere uns</a> einfach.</p>
+        </p>
+    </div>
+
 </main>
 
 <footer>
