--- a/projekte.html
+++ b/projekte.html
@@ -43,7 +43,7 @@
 
         <br>
 
-        <a href="https://esel.bar"><h3>esel | Okt - Dez 2024</h3></a>
+        <a href="https://esel.bar"><h3>esel Bar | Okt - Dez 2024</h3></a>
         <p>Am Idaplatz führten wir während drei Monaten eine glatte PopUp-Bar. Hier ein paar Impressionen.</p>
         <br>
 
