added button onlineshop

--- a/index.html
+++ b/index.html
@@ -84,6 +84,11 @@
         <img src="img/gifs/new10.gif" style="height: 70px; margin-left: 20%;" alt="new">
         <p>Achtung!! Unser online-Store ist offen!
         <br>Dort kannst du unsere Produkte direkt bestellen.</p>
+
+        <div class="wrapper">
+            <h4><a href="shop.html">Zum Shop &nbsp;></a></h4>
+        </div>
+
     </div>
 
 
