--- a/shop.html
+++ b/shop.html
@@ -81,7 +81,7 @@
     </main>
 
     <footer>
-        <p>randvoll GmbH | Schärenmoosstrasse 105 | 8052 Züri<br>
+        <p>randvoll GmbH | Pfingstweidstrasse 31 | 8005 Züri<br>
             079 575 51 22 | prost@randvoll.gmbh | CHE-464.547.237</p>
         <img src="img/gifs/thanksvorvisiting.gif" alt="thanks" style="width: 20%; margin-top: 10px;">
         <p>© <span id="copyright-year"></span> randvoll GmbH. Alle Rechte vorbehalten.</p>
